# kiparla-tools

./: .gitignore  01_ParlaBOA_E.csv  README.md  pyproject.toml
data/: data_description.csv  output_01_ParlaBOA_E_03_ParlaBOA.tsv  output_01_ParlaBOA_M.tus_03_ParlaBOA.tus.tsv  output_02_StraParlaC_N.tus_03_StraParlaC.tus.tsv  output_03_ParlaBOA_01_ParlaBOA_M.tsv  prova_match.txt  transcribers_behavior.csv
data/alignments/: 01_ParlaBOA_E_01_ParlaBOA_M.tsv  01_ParlaBOA_E_02_ParlaBOA_I.tsv  01_ParlaBOA_E_02_ParlaBOA_L.tsv  01_ParlaBOA_E_03_ParlaBOA.tsv  01_ParlaBOA_M.tus_01_ParlaBOA_E.tus.tsv  01_ParlaBOA_M.tus_02_ParlaBOA_I.tus.tsv  01_ParlaBOA_M.tus_02_ParlaBOA_L.tus.tsv  01_ParlaBOA_M.tus_03_ParlaBOA.tus.tsv  01_ParlaBOA_M_01_ParlaBOA_E.tsv  01_ParlaBOB_N.tus_02_ParlaBOB_S.tus.tsv  01_ParlaBOB_N.tus_03_ParlaBOB.tus.tsv  01_PastiA_O.tus_01_PastiA_R.tus.tsv  01_PastiA_O.tus_02_PastiA_E.tus.tsv  01_PastiA_O.tus_02_PastiA_M.tus.tsv  01_PastiA_O.tus_03_PastiA.tus.tsv  01_PastiA_R.tus_01_PastiA_O.tus.tsv  01_PastiA_R.tus_02_PastiA_E.tus.tsv  01_PastiA_R.tus_02_PastiA_M.tus.tsv  01_PastiA_R.tus_03_PastiA.tus.tsv  01_PastiB_V.tus_02_PastiB_U.tus.tsv  01_PastiB_V.tus_03_PastiB.tus.tsv  01_PastiB_V_02_PastiB_U.tsv  01_StraParlaA_I.tus_01_StraParlaA_L.tus.tsv  01_StraParlaA_I.tus_02_StraParlaA_A.tus.tsv  01_StraParlaA_I.tus_02_StraParlaA_V.tus.tsv  01_StraParlaA_I.tus_03_StraParlaA.tus.tsv  01_StraParlaA_I_01_StraParlaA_L.tsv  01_StraParlaA_I_02_StraParlaA_V.tsv  01_StraParlaA_I_03_StraParlaA.tsv  (+80 more)
logs/: kiparla.log.1  kiparla.log.2
tests/: test_functions.py
(+68 files in other folders)
